Use openFB (modified version) for FB API calls (same behavior in Phonegap & on desktop). Other fixes and tweaks.

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -19,6 +19,7 @@ html {
 body {
   padding: 0;
   margin: 0;
+  position: static; /* Fixes a weird bug in which a huge gap appears above the BODY (after trying to click the "POST" button?) */
   background: $page-bg-color;
   font-family: $helvetica;
   color: $text-copy-color;
